final hits on routes

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="ideas">
   <% @ideas.each do |idea| %>
-    <%= render idea %>
+    <%= image_tag idea.picture_url, width: '100%' if idea.picture.present? %>
     <p>
       <%= link_to "Show this idea", idea %>
     </p>
