--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,15 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="/">The Idea App</a>
+    <a class="navbar-brand" href="/">Testes em Ruby</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/ideas">Ideas</a>
+          <a class="nav-link" href="/ideas">App</a>
+          <a class="nav-link" href="/pages/info">Info</a>
         </li>
       </ul>
     </div>
@@ -38,7 +39,7 @@
 
 <footer>
   <div class="container">
-    Sharing ideas <%= Time.now.year %>
+    Teste de apps <%= Time.now.year %>
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
