--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,14 +1,16 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Ideas</h1>
+<br>
+<h1>Postagens</h1>
 
 <div id="ideas">
   <% @ideas.each do |idea| %>
     <%= image_tag idea.picture_url, width: '100%' if idea.picture.present? %>
     <p>
-      <%= link_to "Show this idea", idea %>
+      <%= link_to "Mostrar postagem", idea %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New idea", new_idea_path %>
+<br>
+
+<%= link_to "Nova postagem", new_idea_path %>
