--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -3,8 +3,8 @@
 <%= image_tag(@idea.picture_url, width: 600) if @idea.picture.present? %>
 
 <div>
-  <%= link_to "Edit this idea", edit_idea_path(@idea) %> |
-  <%= link_to "Back to ideas", ideas_path %>
+  <%= link_to "Editar esta postagem", edit_idea_path(@idea) %> |
+  <%= link_to "Voltar para postagens", ideas_path %>
 
-  <%= button_to "Destroy this idea", @idea, method: :delete %>
+  <%= button_to "Apagar esta postagem", @idea, method: :delete %>
 </div>
